add all methods
