# pkg/models/readings.go
@@ -1,0 +1,6 @@
+package models
+
+type DeviceReadings struct {
+	Date        string
+	Temperature float64
+}
