# pkg/restapi/operations/devices/devices_list_responses.go
@@ -1,193 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package devices
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	models "device-manager/pkg/models"
-)
-
-// DevicesListOKCode is the HTTP code returned for type DevicesListOK
-const DevicesListOKCode int = 200
-
-/*DevicesListOK OK
-
-swagger:response devicesListOK
-*/
-type DevicesListOK struct {
-
-	/*
-	  In: Body
-	*/
-	Payload []*DevicesListOKBodyItems0 `json:"body,omitempty"`
-}
-
-// NewDevicesListOK creates DevicesListOK with default headers values
-func NewDevicesListOK() *DevicesListOK {
-
-	return &DevicesListOK{}
-}
-
-// WithPayload adds the payload to the devices list o k response
-func (o *DevicesListOK) WithPayload(payload []*DevicesListOKBodyItems0) *DevicesListOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the devices list o k response
-func (o *DevicesListOK) SetPayload(payload []*DevicesListOKBodyItems0) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *DevicesListOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(200)
-	payload := o.Payload
-	if payload == nil {
-		payload = make([]*DevicesListOKBodyItems0, 0, 50)
-	}
-
-	if err := producer.Produce(rw, payload); err != nil {
-		panic(err) // let the recovery middleware deal with this
-	}
-
-}
-
-// DevicesListUnauthorizedCode is the HTTP code returned for type DevicesListUnauthorized
-const DevicesListUnauthorizedCode int = 401
-
-/*DevicesListUnauthorized Пользователь не аутентифицирован в системе
-
-swagger:response devicesListUnauthorized
-*/
-type DevicesListUnauthorized struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.ErrorResult `json:"body,omitempty"`
-}
-
-// NewDevicesListUnauthorized creates DevicesListUnauthorized with default headers values
-func NewDevicesListUnauthorized() *DevicesListUnauthorized {
-
-	return &DevicesListUnauthorized{}
-}
-
-// WithPayload adds the payload to the devices list unauthorized response
-func (o *DevicesListUnauthorized) WithPayload(payload *models.ErrorResult) *DevicesListUnauthorized {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the devices list unauthorized response
-func (o *DevicesListUnauthorized) SetPayload(payload *models.ErrorResult) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *DevicesListUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(401)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-// DevicesListNotFoundCode is the HTTP code returned for type DevicesListNotFound
-const DevicesListNotFoundCode int = 404
-
-/*DevicesListNotFound Запрашиваемый ресурс не найден
-
-swagger:response devicesListNotFound
-*/
-type DevicesListNotFound struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.ErrorResult `json:"body,omitempty"`
-}
-
-// NewDevicesListNotFound creates DevicesListNotFound with default headers values
-func NewDevicesListNotFound() *DevicesListNotFound {
-
-	return &DevicesListNotFound{}
-}
-
-// WithPayload adds the payload to the devices list not found response
-func (o *DevicesListNotFound) WithPayload(payload *models.ErrorResult) *DevicesListNotFound {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the devices list not found response
-func (o *DevicesListNotFound) SetPayload(payload *models.ErrorResult) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *DevicesListNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(404)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-// DevicesListUnprocessableEntityCode is the HTTP code returned for type DevicesListUnprocessableEntity
-const DevicesListUnprocessableEntityCode int = 422
-
-/*DevicesListUnprocessableEntity Error
-
-swagger:response devicesListUnprocessableEntity
-*/
-type DevicesListUnprocessableEntity struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.ErrorResult `json:"body,omitempty"`
-}
-
-// NewDevicesListUnprocessableEntity creates DevicesListUnprocessableEntity with default headers values
-func NewDevicesListUnprocessableEntity() *DevicesListUnprocessableEntity {
-
-	return &DevicesListUnprocessableEntity{}
-}
-
-// WithPayload adds the payload to the devices list unprocessable entity response
-func (o *DevicesListUnprocessableEntity) WithPayload(payload *models.ErrorResult) *DevicesListUnprocessableEntity {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the devices list unprocessable entity response
-func (o *DevicesListUnprocessableEntity) SetPayload(payload *models.ErrorResult) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *DevicesListUnprocessableEntity) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(422)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
