# tmp/swagger.yaml
@@ -26,7 +26,7 @@
         "tags": [
           "devices"
         ],
-        "operationId": "devices_list",
+        "operationId": "device_list",
         "responses": {
           "200": {
             "description": "OK",
@@ -41,7 +41,6 @@
                 "properties": {
                   "device_id": {
                     "type": "string",
-                    "format": "uuid",
                     "x-isnullable": false
                   },
                   "device_name": {
@@ -50,7 +49,6 @@
                   },
                   "last_meter_readings_time": {
                     "type": "string",
-                    "format": "date-time",
                     "x-isnullable": true
                   }
                 }
@@ -181,9 +179,40 @@
           "devices"
         ],
         "operationId": "device_readings",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "required": [
+                "meter_readings_time",
+                "temperature"
+              ],
+              "properties": {
+                "meter_readings_time": {
+                  "type": "string",
+                  "format": "date-time",
+                  "x-isnullable": false
+                },
+                "temperature": {
+                  "type": "number",
+                  "x-isnullable": false
+                }
+              },
+              "example": [
+                {
+                  "meter_readings_time": "2017-07-21T17:32:28Z",
+                  "temperature": 18.7
+                }
+              ]
+            }
+          }
+        ],
         "responses": {
           "201": {
-            "description": "No content"
+            "description": "Created"
           },
           "401": {
             "description": "Пользователь не аутентифицирован в системе",
@@ -239,6 +268,12 @@
           },
           "401": {
             "description": "Пользователь не аутентифицирован в системе",
+            "schema": {
+              "$ref": "#/definitions/errorResult"
+            }
+          },
+          "403": {
+            "description": "Пользователь не имеет доступа к данному ресурсу",
             "schema": {
               "$ref": "#/definitions/errorResult"
             }
@@ -332,16 +367,17 @@
     "JWTKey": {
       "type": "object",
       "properties": {
-        "device_id": {
+        "email": {
           "type": "string",
           "x-isnullable": true
+        },
+        "id": {
+          "type": "string",
+          "x-isnullable": false
         },
         "type": {
-          "type": "string"
-        },
-        "user_id": {
           "type": "string",
-          "x-isnullable": true
+          "x-isnullable": false
         }
       }
     },
